--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,17 +3,17 @@ server:
 
 
 
-person:
-  str: 'Hello Word!'
-  i: 19
-  date: 1996/11/18
-  map:
-    k1: v1
-    k2: v2
-    str1: "Hello \n Word!"
-    str2: 'Hello \n Word!'
-  list:
-    - l1
-    - l2
-    - l3
-  email: 963134974@qq.com
+#person:
+#  str: 'Hello Word!'
+#  i: 19
+#  date: 1996/11/18
+#  map:
+#    k1: v1
+#    k2: v2
+#    str1: "Hello \n Word!"
+#    str2: 'Hello \n Word!'
+#  list:
+#    - l1
+#    - l2
+#    - l3
+#  email: 963134974@qq.com
