配置文件占位符

--- a/src/main/resources/person.properties
+++ b/src/main/resources/person.properties
@@ -4,4 +4,5 @@ person1.date=1996/11/18
 person1.map.str1="Hello \n Word!"
 person1.map.str2='Hello \n Word!'
 person1.email= 963134974@qq.com
-person1.list=l1,l2,l3
+#占位符${person1.hello:default}  :后为默认值
+person1.list=l1,l2,l3,${random.uuid},${person1.email}email,${person1.hello:default}
